🐛 fix: now set values to custom selects with elementRef update visible value

--- a/src/scss/directive/select.scss
+++ b/src/scss/directive/select.scss
@@ -8,6 +8,7 @@
 		$border-radius: var(--border-radius-3);
 		$transition-duration: 0.25s;
 
+		cursor: pointer;
 		position: relative;
 		border-radius: $border-radius;
 		transition: box-shadow $transition-duration ease-in-out;
